[package]
name = "silent_server"
version = "1.1.0"
authors = ["Aleksandr \"Flone\" Tretyakov (github.com/Flone-dnb)"]
edition = "2018"
license = "Zlib"

[dependencies]
platform-dirs = "0.3.0"
bytevec = "0.2.0"
futures = "0.3.14"
chrono = "0.4.19"
num-traits = "0.2"
num-derive = "0.3"
socket2 = "0.4.0"
aes = "0.7.4"
block-modes = "0.8.1"
rand = "0.8.3"
num-bigint = "0.4.2"
