[package]
name = "silent_server"
version = "1.3.0"
authors = ["Aleksandr \"Flone\" Tretyakov"]
edition = "2018"
license = "MIT"
description = "Lightweight open-source voice chat server written in Rust."
repository = "https://github.com/Flone-dnb/silent-server-rs"
homepage = "https://github.com/Flone-dnb/silent-server-rs"
readme = "README.md"

[dependencies]
bytevec = "0.2.0"
futures = "0.3.14"
chrono = "0.4.19"
num-traits = "0.2"
num-derive = "0.3"
socket2 = "0.4.0"
aes = "0.7.4"
block-modes = "0.8.1"
rand = "0.8.3"
num-bigint = "0.4.2"
serde = {version = "1.0.130", features = ["derive"]}
bincode = "1.3.3"

[target.'cfg(windows)'.dependencies]
platform-dirs = "0.3.0"

[target.'cfg(unix)'.dependencies]
users = "0.11.0"
