[package]
name = "silent_server"
version = "1.4.1"
authors = ["Aleksandr Tretyakov"]
edition = "2021"
license = "MIT"
description = "Lightweight open-source voice chat server written in Rust."
repository = "https://github.com/Flone-dnb/silent-server-rs"
homepage = "https://github.com/Flone-dnb/silent-server-rs"
readme = "README.md"

[dependencies]
futures = "0.3.21"
chrono = "0.4.19"
socket2 = "0.4.4"
aes = "0.8.1"
cbc = {version = "0.1.2", features = ["alloc"]}
rand = "0.8.5"
num-bigint = {version = "0.4.3", features = ["serde", "rand"]}
serde = {version = "1.0.137", features = ["derive"]}
bincode = "1.3.3"
cmac = "0.7.1"

[target.'cfg(windows)'.dependencies]
platform-dirs = "0.3.0"

[target.'cfg(unix)'.dependencies]
users = "0.11.0"
